tdf#159302: Another UNO property "BaseLine" needs to use mm/100s

Change-Id: I6688577a41590624f1e1f08112f1308e810a7e37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163333
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit b6ef30d1b049977beb23d28a07d77012fa1daf47)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163339
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>